fix: jdk 17 기준으로 코드 변경